<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/titleShowed"
                android:textColor="#0000" />

            <TextView
                android:id="@+id/titleShowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                />

            <TextView
                android:id="@+id/checkedShowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleShowed"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                />

            <TextView
                android:id="@+id/dataShowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkedShowed"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                />

            <TextView
                android:id="@+id/personShowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dataShowed"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                />

            <Button
                android:id="@+id/completed_item"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/personShowed"
                android:background="#66008000"
                android:text="@string/set_as"
                android:textSize="12sp"
                android:layout_marginTop="2dp"/>


            <Button
                android:id="@+id/delete_item"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/personShowed"
                android:layout_marginStart="2dp"
                android:layout_toRightOf="@id/completed_item"
                android:background="#66FF0000"
                android:text="@string/delete_point"
                android:textSize="12sp"
                android:layout_marginTop="2dp"/>

            <Button
                android:id="@+id/edit_item"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/personShowed"
                android:layout_marginStart="2dp"
                android:layout_toRightOf="@id/delete_item"
                android:background="#66FFFF99"
                android:text="@string/edit_point"
                android:textSize="12sp"
                android:layout_marginTop="2dp"/>



        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>